// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default w/ error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Problem field
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-vaotfo=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance gaps 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-1yk08w2=""
                />
              </button>
              <div
                data-css-1af7ks9=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-in6gqi=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-1yk08w2=""
                />
              </button>
              <div
                data-css-1af7ks9=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-vaotfo=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-1p24ny8=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-4goio8=""
                />
              </button>
              <div
                data-css-eycxdp=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Problem field
        </div>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-in6gqi=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-1p24ny8=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                />
                <span
                  data-css-4goio8=""
                />
              </button>
              <div
                data-css-eycxdp=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-vaotfo=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  clipRule="evenodd"
                  d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance medium default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-1yk08w2=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance medium subtle 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-1p24ny8=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-4goio8=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-eycxdp=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance small default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-kcavkk=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-iff4wh=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance small subtle 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-80uqom=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              The placeholder 
            </span>
            <span
              data-css-1fqmm62=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-eycxdp=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Problem field
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-1p24ny8=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-4goio8=""
            />
          </button>
          <div
            data-css-eycxdp=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-vaotfo=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Normal
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                I'm normal, see
              </span>
              <span
                data-css-1yk08w2=""
              >
                I'm normal, see
              </span>
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-6ga4kh=""
      >
        Still normal
      </div>
    </label>
    <label
      data-css-1h53i33=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        I'm not usable
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={true}
              onClick={null}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                I'm untouchable
              </span>
              <span
                data-css-1yk08w2=""
              >
                I'm untouchable
              </span>
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-6ga4kh=""
      >
        Neither am I
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots focus autofocus with ref 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1h53i33=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={true}
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus onBlur 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus onFocus 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels all 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Some label
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Some placeholder
            </span>
            <span
              data-css-1yk08w2=""
            >
              Some placeholder
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Some label
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Some label
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels placeholder 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              some placeholder
            </span>
            <span
              data-css-1yk08w2=""
            >
              some placeholder
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            />
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots layouts custom width 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      two
    </div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "width": 150,
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Width 150
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                One item One item One item One item One item One item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Width determined by longest item
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                One item One item One item One item One item One item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
        "width": "500px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        First
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-1yk08w2=""
              />
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Second
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-1yk08w2=""
              />
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Third
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-1p24ny8=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-4goio8=""
              />
            </button>
            <div
              data-css-eycxdp=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-dysqqm=""
      >
        Fourth
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-in6gqi=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-1p24ny8=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              />
              <span
                data-css-4goio8=""
              />
            </button>
            <div
              data-css-eycxdp=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-vaotfo=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-1p24ny8=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                >
                  Filter
                </span>
                <span
                  data-css-4goio8=""
                >
                  Filter
                </span>
              </button>
              <div
                data-css-eycxdp=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div
      style={
        Object {
          "border": "3px solid green",
          "height": "50px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu divider 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu in stack 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Level
        </div>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-1yk08w2=""
                >
                  Select one
                </span>
              </button>
              <div
                data-css-1af7ks9=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-dysqqm=""
        >
          Level
        </div>
        <div
          data-css-8befsb=""
        >
          <div
            data-css-3ah8pf=""
            data-css-ctre2o=""
          >
            <div
              data-css-ne3jjf=""
            >
              <button
                data-css-i9dafq=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-1pnvt9=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-1yk08w2=""
                >
                  Select another one
                </span>
              </button>
              <div
                data-css-1af7ks9=""
              >
                <div
                  data-css-7dab2f=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu nested 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            >
              Select another one
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu onClicks 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-in6gqi=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-1p24ny8=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-4goio8=""
            >
              Select another one
            </span>
          </button>
          <div
            data-css-eycxdp=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-vaotfo=""
      >
        <div
          data-css-7dab2f=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu single list 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu single list w/ icon 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            >
              Select one
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu super long 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              This level really is the longest level that anyone has ever seen. There is none longer
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ longer nested menu item label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Short enough
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ longer placeholder 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              This one is longer than any menu item
            </span>
            <span
              data-css-1yk08w2=""
            >
              This one is longer than any menu item
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-6ga4kh=""
    >
      The course level
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ value 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
            value="three-1"
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-1qy54zb=""
            >
              Three and the amazing item
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots placeholder as pre-selected item 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              Three item
            </span>
            <span
              data-css-1yk08w2=""
            >
              Two item
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots portal position 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "height": "100vh",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porta nibh venenatis cras sed. Ornare lectus sit amet est placerat in egestas. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper. Nisl nisi scelerisque eu ultrices. Amet risus nullam eget felis. Arcu non sodales neque sodales ut etiam. Tortor at auctor urna nunc. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Condimentum vitae sapien pellentesque habitant morbi tristique. Egestas maecenas pharetra convallis posuere morbi leo urna molestie. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Lobortis feugiat vivamus at augue eget arcu dictum. Fusce id velit ut tortor pretium viverra suspendisse. Convallis tellus id interdum velit. In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Tempor orci dapibus ultrices in iaculis nunc. Elit ullamcorper dignissim cras tincidunt lobortis feugiat. Sit amet massa vitae tortor. Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula ipsum. Ipsum dolor sit amet consectetur adipiscing. Sed felis eget velit aliquet sagittis. Elit pellentesque habitant morbi tristique. Sit amet consectetur adipiscing elit. Id volutpat lacus laoreet non curabitur gravida arcu ac. Enim neque volutpat ac tincidunt. Lorem ipsum dolor sit amet.
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Level
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                Three and the amazing item
              </span>
              <span
                data-css-1yk08w2=""
              />
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    Aliquam sem et tortor consequat id. Vitae tempus quam pellentesque nec nam. Platea dictumst quisque sagittis purus sit amet volutpat. Convallis tellus id interdum velit laoreet id. Convallis tellus id interdum velit laoreet id donec ultrices. Metus vulputate eu scelerisque felis imperdiet. Luctus venenatis lectus magna fringilla urna porttitor. Pellentesque habitant morbi tristique senectus. Mi bibendum neque egestas congue quisque egestas diam in. Faucibus interdum posuere lorem ipsum dolor sit. Tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed. Ut tortor pretium viverra suspendisse potenti. Lectus proin nibh nisl condimentum id venenatis a condimentum. Consequat id porta nibh venenatis cras sed felis eget velit. Placerat orci nulla pellentesque dignissim enim sit. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Malesuada fames ac turpis egestas integer. Consectetur purus ut faucibus pulvinar elementum integer. Consectetur adipiscing elit pellentesque habitant morbi. Lorem ipsum dolor sit amet consectetur adipiscing elit ut. Sed tempus urna et pharetra pharetra massa massa ultricies mi. Dictumst quisque sagittis purus sit. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum. Porttitor massa id neque aliquam vestibulum. Viverra maecenas accumsan lacus vel facilisis volutpat est. Ac orci phasellus egestas tellus. Dui vivamus arcu felis bibendum ut tristique. Pharetra convallis posuere morbi leo urna molestie at. Suscipit tellus mauris a diam maecenas. Cursus risus at ultrices mi tempus imperdiet nulla. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum. In eu mi bibendum neque egestas congue quisque. Augue mauris augue neque gravida in fermentum. Interdum consectetur libero id faucibus nisl tincidunt eget. In metus vulputate eu scelerisque felis imperdiet proin. Ut lectus arcu bibendum at varius vel pharetra vel. Semper auctor neque vitae tempus quam pellentesque nec nam aliquam. In dictum non consectetur a erat nam at lectus urna. Sem fringilla ut morbi tincidunt. Porttitor massa id neque aliquam vestibulum morbi. Ut placerat orci nulla pellentesque dignissim enim sit amet. Sed augue lacus viverra vitae congue eu consequat. Nibh cras pulvinar mattis nunc sed. Nec ultrices dui sapien eget mi. Ut tellus elementum sagittis vitae. Diam sollicitudin tempor id eu nisl nunc mi ipsum. Nisi vitae suscipit tellus mauris a diam. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Amet justo donec enim diam vulputate. Arcu vitae elementum curabitur vitae. Urna cursus eget nunc scelerisque viverra mauris in aliquam sem. Vel turpis nunc eget lorem dolor sed viverra. Orci eu lobortis elementum nibh tellus molestie nunc non. Mi eget mauris pharetra et ultrices. Pulvinar neque laoreet suspendisse interdum consectetur libero id. Vestibulum lectus mauris ultrices eros in cursus turpis massa.
  </div>
</div>
`;

exports[`Storyshots props whitelist title 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-dysqqm=""
    >
      Level
    </div>
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            onClick={[Function]}
            title="This title should be present"
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              One item
            </span>
            <span
              data-css-1yk08w2=""
            />
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots whitelist clear 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      two
    </div>
    <button
      onClick={[Function]}
    >
      Clear
    </button>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Thing to change
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                Three item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-8befsb=""
    >
      <div
        data-css-3ah8pf=""
        data-css-ctre2o=""
      >
        <div
          data-css-ne3jjf=""
        >
          <button
            data-css-i9dafq=""
            disabled={false}
            name="myFieldNameOfPower"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-1pnvt9=""
            >
              I have a form name
            </span>
            <span
              data-css-1yk08w2=""
            >
              I have a form name
            </span>
          </button>
          <div
            data-css-1af7ks9=""
          >
            <div
              data-css-7dab2f=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots whitelist onChange 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      two
    </div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-dysqqm=""
      >
        Thing to change
      </div>
      <div
        data-css-8befsb=""
      >
        <div
          data-css-3ah8pf=""
          data-css-ctre2o=""
        >
          <div
            data-css-ne3jjf=""
          >
            <button
              data-css-i9dafq=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              value="two"
            >
              <span
                aria-hidden={true}
                data-css-1pnvt9=""
              >
                Three item
              </span>
              <span
                data-css-1qy54zb=""
              >
                Two item
              </span>
            </button>
            <div
              data-css-1af7ks9=""
            >
              <div
                data-css-7dab2f=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.6464 15.0565L7.35354 10.7636C7.15828 10.5683 7.15828 10.2518 7.35354 10.0565L8.05692 9.35311C8.25199 9.15804 8.5682 9.15782 8.76354 9.35262L12 12.5801L15.2364 9.35262C15.4318 9.15782 15.748 9.15804 15.943 9.35311L16.6464 10.0565C16.8417 10.2518 16.8417 10.5683 16.6464 10.7636L12.3535 15.0565C12.1583 15.2518 11.8417 15.2518 11.6464 15.0565Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
